--- a/classes/Microphone Input.html
+++ b/classes/Microphone Input.html
@@ -1,5 +1,5 @@
 <body>
-Record and play mic input in Tone.js <p>
+Record and play mic input in app.js <p>
 
     <button type="button" id="start_btn">Record</button>
     <button type="button" id="play_btn" disabled>Play</button>
